[package]
name = "portal-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "portal-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
anchor-client.workspace = true
common = { path = "../packages/common" }
solana-rpc-client-types = "2.0"
solana-rpc-client = "2.0"
solana-sdk = "2.0"
solana-client = "2.0"
bincode = "1.3"
executor-account-resolver-svm = { version = "0.0.1", git = "https://github.com/wormholelabs-xyz/executor-account-resolver-svm", rev = "c180f40149bbb48e019e95d5a5daa1512fe063ac" }
borsh.workspace = true
