[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
test = true

[dependencies]
tokio = { version = "1.41", features = ["full"] }
solana-client = "2.3"
solana-sdk = "2.3"
anyhow = "1.0"
serde_json = "1.0"
once_cell = "1.20"
ctor = "0.2"
common = { path = "../packages/common" }
anchor-lang.workspace = true

[dev-dependencies]
anchor-client.workspace = true
