[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
test = true

[dependencies]
tokio = { version = "1.41", features = ["full"] }
solana-client = "2.3"
solana-sdk = "2.3"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
hex = "0.4"
once_cell = "1.20"
ctor = "0.2"
m0-portal-common = { path = "../packages/common" }
portal = { path = "../programs/portal" }
wormhole-adapter = { path = "../programs/wormhole-adapter" }
hyperlane-adapter = { path = "../programs/hyperlane-adapter" }
layerzero-adapter = { path = "../programs/layerzero-adapter" }
anchor-lang.workspace = true
solana-transaction-status-client-types = "2.3.13"
anchor-spl.workspace = true
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "7.0.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"

[dev-dependencies]
anchor-client.workspace = true
hex = "0.4"
