[package]
name = "hyperlane-adapter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hyperlane_adapter"

[features]
default = ["mainnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
mainnet = []
devnet = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
common = { path = "../../packages/common" }
cfg-if.workspace = true
borsh = "0.10.3"
