[package]
name = "portal"
version = "0.1.0"
description = "bridge program that interacts with bridge adapters"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "portal"

[features]
default = ["mainnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "m0-portal-common/idl-build",
]
mainnet = []
skip-validation = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
m0-portal-common = { path = "../../packages/common" }
solana-security-txt.workspace = true

[dev-dependencies]
alloy-sol-types = "0.8"
