[package]
name = "wormhole-adapter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_adapter"

[features]
default = ["mainnet"]
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "m0-portal-common/idl-build",
]
mainnet = []
devnet = []
legacy-ntt = []
skip-validation = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
m0-portal-common = { path = "../../packages/common" }
cfg-if.workspace = true
wormhole-svm-definitions = { git = "https://github.com/wormhole-foundation/wormhole.git", rev = "0231deba271494519717c8b5e583ce89e428de4c", features = [
    "borsh",
] }
solana-security-txt.workspace = true
solana-address-lookup-table-interface = "2.2.2"

[dev-dependencies]
base64 = "0.22.1"
